--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "PaDRe-PaDS aims to to add additional machine learning concepts in
 authors = ["Thomas Weißgerber <thomas.weissgerber@uni-passau.de>", "Ben Amor Mehdi <Mehdi.BenAmor@uni-passau.de>", "Christofer Fellicious <Christofer.Fellicious@uni-passau.de>"]
 license = "GPL-3.0-or-later"
 readme = "README.md"
-homepage = "www.padre-lab.eu"
+homepage = "https://www.padre-lab.eu/"
 repository = "https://github.com/padre-lab-eu/padre-pads"
 documentation = "https://readthedocs.org/projects/pypads/"
 keywords = ["tracking", "machine learning", "deep learning", "neural networks", "reproducibility"]
