--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,13 @@ license = "GPL-3.0-or-later"
 readme = "README.md"
 homepage = "https://www.padre-lab.eu/"
 repository = "https://github.com/padre-lab-eu/padre-pads"
-documentation = "https://readthedocs.org/projects/pypads/"
+documentation = "https://pypads.readthedocs.io/en/latest/"
 keywords = ["tracking", "machine learning", "deep learning", "neural networks", "reproducibility"]
-classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)", "Natural Language :: English", "Operating System :: MacOS", "Operating System :: Microsoft :: Windows", "Operating System :: Unix", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Topic :: Scientific/Engineering :: Artificial Intelligence"]
+classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)", "Natural Language :: English", "Operating System :: MacOS", "Operating System :: Microsoft :: Windows", "Operating System :: Unix", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Topic :: Scientific/Engineering :: Artificial Intelligence"]
 
 [tool.poetry.dependencies]
 python = "^3.7.0"
-pypads = "^0.1.8"
+pypads = "^0.1.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2.5"
