--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,28 @@ tensorflow = "^2.0.0b1"
 psutil = "^5.7.0"
 networkx = "^2.4"
 torch = "^1.5.0"
+sphinx = "^2.0.1"
+sphinx_rtd_theme = "^0.4.3"
+taskipy = "^1.1.2"
+bump2version = "^1.0.0"
+coverage = {version = "^5.0", extras = ["toml"]}
+gitchangelog = "^3.0.4"
+
+[tool.poetry.extras]
+docs = ["sphinx", "sphinx_rtd_theme"]
+
+[tool.taskipy.tasks]
+deploy = "poetry build && poetry publish"
+
+[tool.coverage.run]
+branch = true
+include = ["padrepads/*"]
+omit = [
+    "*/__init__.py",
+]
+
+[tool.coverage.report]
+exclude_lines = []
 
 [build-system]
 requires = ["poetry>=0.12"]
