--- a/.gitchangelog.rc
+++ b/.gitchangelog.rc
@@ -63,6 +63,7 @@ ignore_regexps = [
     r'@refactor', r'!refactor',
     r'@wip', r'!wip',
     r'@wip', r'!wip',
+    r'^(?![cC]hg\s*:|[fF]ix\s*:|[nN]ew\s*:|Bump ).*',
     r'^([cC]hg|[fF]ix|[nN]ew)\s*:\s*[p|P]kg:',
     r'^([cC]hg|[fF]ix|[nN]ew)\s*:\s*[d|D]ev:',
     r'^(.{3,3}\s*:)?\s*[fF]irst commit.?\s*$',
