--- a/.gitchangelog.rc
+++ b/.gitchangelog.rc
@@ -152,7 +152,7 @@ subject_process = (strip |
 ##
 ## Tags that will be used for the changelog must match this regexp.
 ##
-tag_filter_regexp = r'^[0-9]+\.[0-9]+(\.[0-9]+)?$'
+tag_filter_regexp = r'^v[0-9]+\.[0-9]+(\.[0-9]+)?$'
 
 
 ## ``unreleased_version_label`` is a string or a callable that outputs a string
@@ -264,7 +264,8 @@ INSERT_POINT_REGEX = r'''(?isxu)
 )
 
 (?P<rev>%(rev)s)
-''' % {'rev': r"[0-9]+\.[0-9]+(\.[0-9]+)?"}
+''' % {'rev': r"v[0-9]+\.[0-9]+(\.[0-9]+)?"}
+
 
 revs = [
     Caret(FileFirstRegexMatch(OUTPUT_FILE, INSERT_POINT_REGEX)),
@@ -305,12 +306,5 @@ publish = FileRegexSubst(OUTPUT_FILE, INSERT_POINT_REGEX, r"\1\o\g<rev>")
 ## changelog.
 ##
 ## The default is to use all commits to make the changelog.
-#revs = ["^1.0.3", ]
-revs = [
-    Caret(
-        FileFirstRegexMatch(
-            "CHANGELOG.rst",
-            r"(?P<rev>[0-9]+\.[0-9]+(\.[0-9]+)?)\s+\([0-9]+-[0-9]{2}-[0-9]{2}\)\n--+\n")),
-    "HEAD"
-]
-revs = []
+## revs = ["^1.0.3", ]
+## revs = []
