--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ cache:
 
 stages:
   - tests
-  - deploy
+#  - deploy
 
 # Jobs templates
 
@@ -20,10 +20,10 @@ stages:
     - poetry config virtualenvs.in-project true
     - poetry install --verbose
 
-.deploy-template: &deploy
-  <<: *install-deps
-  image: python:3.8
-  stage: deploy
+#.deploy-template: &deploy
+#  <<: *install-deps
+#  image: python:3.8
+#  stage: deploy
 
 .test-template: &test
   <<: *install-deps
@@ -38,28 +38,22 @@ stages:
     expire_in: 1 week
 
 # Test with different python versions
-# Fails currently because of dependencies in pyproject.toml
-#test-python-3.5:
-#  <<: *test
-#  image: python:3.5
-#
-#test-python-3.6:
-#  <<: *test
-#  image: python:3.6
+test-python-3.6:
+  <<: *test
+  image: python:3.6
 
 test-python-3.7:
   <<: *test
   image: python:3.7
 
-#test-python-3.8:
-#  <<: *test
-#  image: python:3.8
+test-python-3.8:
+  <<: *test
+  image: python:3.8
 
-# Deploy jobs
-
-publish:
-  <<: *deploy
-  only:
-    - tags
-  script:
-    - poetry publish
+## Deploy jobs
+#publish:
+#  <<: *deploy
+#  only:
+#    - tags
+#  script:
+#    - poetry publish
