--- a/.gitchangelog.rc
+++ b/.gitchangelog.rc
@@ -152,7 +152,7 @@ subject_process = (strip |
 ##
 ## Tags that will be used for the changelog must match this regexp.
 ##
-tag_filter_regexp = r'^v[0-9]+\.[0-9]+(\.[0-9]+)?$'
+tag_filter_regexp = r'^[0-9]+\.[0-9]+(\.[0-9]+)?$'
 
 
 ## ``unreleased_version_label`` is a string or a callable that outputs a string
@@ -264,7 +264,7 @@ INSERT_POINT_REGEX = r'''(?isxu)
 )
 
 (?P<rev>%(rev)s)
-''' % {'rev': r"v[0-9]+\.[0-9]+(\.[0-9]+)?"}
+''' % {'rev': r"[0-9]+\.[0-9]+(\.[0-9]+)?"}
 
 
 revs = [
