Fix: dev: Fixed broken documentation generation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ docs = ["sphinx", "sphinx_rtd_theme"]
 #pre_publish = "poetry test"
 publish = "bump2version"
 post_publish = "gitchangelog && git add ./CHANGELOG.rst && git commit -m 'auto: Updated changelog' && git push && task doc"
-doc = "./docs/make html"
+doc = "make -C ./docs html"
 post_doc = "task deploy"
 deploy = "poetry build && poetry publish"
 
