--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "padrepads"
-version = "0.1.3"
+version = "0.1.11"
 description = "PaDRe-PaDS aims to to add additional machine learning concepts into the world of pypads."
 authors = ["Thomas Weißgerber <thomas.weissgerber@uni-passau.de>", "Ben Amor Mehdi <Mehdi.BenAmor@uni-passau.de>", "Christofer Fellicious <Christofer.Fellicious@uni-passau.de>"]
 license = "GPL-3.0-or-later"
@@ -25,6 +25,33 @@ tensorflow = "^2.0.0b1"
 psutil = "^5.7.0"
 networkx = "^2.4"
 torch = "^1.5.0"
+sphinx = "^2.0.1"
+sphinx_rtd_theme = "^0.4.3"
+taskipy = "^1.1.2"
+bump2version = "^1.0.0"
+coverage = {version = "^5.0", extras = ["toml"]}
+gitchangelog = "^3.0.4"
+
+[tool.poetry.extras]
+docs = ["sphinx", "sphinx_rtd_theme"]
+
+[tool.taskipy.tasks]
+#pre_publish = "poetry test"
+publish = "bump2version"
+post_publish = "gitchangelog && git add ./CHANGELOG.rst && git commit -m 'auto: Updated changelog' && git push && task doc"
+doc = "make -C ./docs html"
+post_doc = "task deploy"
+deploy = "poetry build && poetry publish"
+
+[tool.coverage.run]
+branch = true
+include = ["padrepads/*"]
+omit = [
+    "*/__init__.py",
+]
+
+[tool.coverage.report]
+exclude_lines = []
 
 [build-system]
 requires = ["poetry>=0.12"]
