Fix: doc: Cleanup index.rst

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ docs = ["sphinx", "sphinx_rtd_theme"]
 [tool.taskipy.tasks]
 #pre_publish = "poetry test"
 publish = "bump2version"
-post_publish = "gitchangelog && git add ./CHANGELOG.rst && git commit -m 'auto: Updated changelog' && git push && task doc"
+post_publish = "gitchangelog && git add ./CHANGELOG.rst && git commit -m 'auto: Updated changelog' && git push --tags && task doc"
 doc = "make -C ./docs html"
 post_doc = "task deploy"
 deploy = "poetry build && poetry publish"
