--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -10,4 +10,4 @@ replace = version = "{new_version}"
 
 [bumpversion:file:padrepads/__init__.py]
 search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
+replace = {new_version}
