--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.1.14
+current_version = 0.1.13
 commit = True
 tag = True
 tag_name = {new_version}
@@ -10,4 +10,4 @@ replace = version = "{new_version}"
 
 [bumpversion:file:padrepads/__init__.py]
 search = __version__ = '{current_version}'
-replace = {new_version}
+replace = __version__ = '{new_version}'
