Chg: dev: Removed tests for python 3.6 for now

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,9 +38,10 @@ stages:
     expire_in: 1 week
 
 # Test with different python versions
-test-python-3.6:
-  <<: *test
-  image: python:3.6
+# Fix pypads 3.6 first
+#test-python-3.6:
+#  <<: *test
+#  image: python:3.6
 
 test-python-3.7:
   <<: *test
