--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
-name = "padrepads"
+name = "pypads_padre"
 version = "0.1.11"
 description = "PaDRe-PaDS aims to to add additional machine learning concepts into the world of pypads."
 authors = ["Thomas Weißgerber <thomas.weissgerber@uni-passau.de>", "Ben Amor Mehdi <Mehdi.BenAmor@uni-passau.de>", "Christofer Fellicious <Christofer.Fellicious@uni-passau.de>"]
 license = "GPL-3.0-or-later"
 readme = "README.md"
 homepage = "https://www.padre-lab.eu/"
-repository = "https://github.com/padre-lab-eu/padre-pads"
+repository = "https://github.com/padre-lab-eu/pypads_padre"
 documentation = "https://pypads.readthedocs.io/en/latest/"
 keywords = ["tracking", "machine learning", "deep learning", "neural networks", "reproducibility"]
 classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)", "Natural Language :: English", "Operating System :: MacOS", "Operating System :: Microsoft :: Windows", "Operating System :: Unix", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Topic :: Scientific/Engineering :: Artificial Intelligence"]
@@ -17,7 +17,6 @@ pypads = "^0.1.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2.5"
-nose = "^1.3.7"
 pytest-faulthandler = "^2.0.1"
 scikit-learn = "^0.21.3"
 keras = "^2.3.1"
@@ -45,7 +44,7 @@ deploy = "poetry build && poetry publish"
 
 [tool.coverage.run]
 branch = true
-include = ["padrepads/*"]
+include = ["pypads_padre/*"]
 omit = [
     "*/__init__.py",
 ]
