--- a/pypads_padre/bindings/resources/mapping/keras_2_3_1.yml
+++ b/pypads_padre/bindings/resources/mapping/keras_2_3_1.yml
@@ -7,7 +7,7 @@ metadata:
 
 mappings:
   :keras:
-    :metrics.{re:.*}:
+    :metrics.Metric:
       hooks: ["pypads_metric"]
       data:
         concepts: ["keras classification metrics"]
