--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -11,3 +11,7 @@ replace = version = "{new_version}"
 [bumpversion:file:pypads_padre/__init__.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
+
+[bumpversion:file:docs/conf.py]
+search = release = '{current_version}'
+replace = release = '{new_version}'
