--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pytest-faulthandler = "^2.0.1"
 scikit-learn = "^0.21.3"
 keras = "^2.3.1"
 tensorflow = "^2.0.0b1"
+torchvision = "^0.5.0"
 psutil = "^5.7.0"
 networkx = "^2.4"
 torch = "^1.5.0"
