--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,17 +38,17 @@ stages:
     expire_in: 1 week
 
 # Test with different python versions
-test-python-3.6:
-  <<: *test
-  image: python:3.6
+#test-python-3.6:
+#  <<: *test
+#  image: python:3.6
 
 test-python-3.7:
   <<: *test
   image: python:3.7
 
-test-python-3.8:
-  <<: *test
-  image: python:3.8
+#test-python-3.8:
+#  <<: *test
+#  image: python:3.8
 
 ## Deploy jobs
 #publish:
