--- a/pypads_padre/bindings/resources/mapping/sklearn_0_19_1.yml
+++ b/pypads_padre/bindings/resources/mapping/sklearn_0_19_1.yml
@@ -3,7 +3,7 @@ metadata:
   version: "0.1.0"
   library:
     name: "sklearn"
-    version: "0.19.1"
+    version: ">= 0.19.1"
 
 fragments:
   default_model:
@@ -49,10 +49,11 @@ mappings:
           data:
             concepts: ["Sklearn provided hyperparameter search execution"]
     !!python/pPath model_selection._split:
-      !!python/pPath BaseCrossValidator.split:
-        hooks: ["pypads_split"]
-        data:
-          concepts: ["Sklearn provided splitting"]
+      !!python/pPath BaseCrossValidator:
+        !!python/pPath split:
+          hooks: ["pypads_split"]
+          data:
+            concepts: ["Sklearn provided splitting"]
       !!python/pPath BaseShuffleSplit.split:
         hooks: ["pypads_split"]
         data:
