Chg: dev: doc and param search loggers WIP.

--- a/pypads_padre/bindings/resources/mapping/sklearn_0_19_1.yml
+++ b/pypads_padre/bindings/resources/mapping/sklearn_0_19_1.yml
@@ -27,7 +27,7 @@ mappings:
         !!python/pPath score:
           hooks: "pypads_metric"
     !!python/pPath metrics.classification:
-      !!python/rSeg .*:
+      !!python/rSeg .f1_score:
         hooks: "pypads_metric"
         data:
           concepts: ["Sklearn provided metric"]
