--- a/pypads_padre/bindings/resources/mapping/sklearn_0_19_1.yml
+++ b/pypads_padre/bindings/resources/mapping/sklearn_0_19_1.yml
@@ -20606,7 +20606,7 @@ mappings:
                     '@type': padre:OptimisationParameters
                     padre:configures: padre:DecisionTreeRegressor
 metadata:
-  author: "Thomas Wei\xDFgerber"
+  author: "Thomas Weissgerber"
   library:
     name: sklearn
     version: '>= 0.19.1'
