New: dev: PoC for DataSet RDF valid structure

--- a/pypads_padre/bindings/resources/mapping/sklearn_0_19_1.yml
+++ b/pypads_padre/bindings/resources/mapping/sklearn_0_19_1.yml
@@ -13,16 +13,16 @@ mappings:
     data:
       '@json-ld': # Path to json-lds to be added to the ontology with onto-pads
         - estimator.@schema # A-Box estimator class
-        - estimator.alogorithm.@schema # T-Box algorithm mathematical concept
-        - parameters.model_parameters.algorithm.@schema # T-Box parameter info ...
-        - parameters.optimisation_parameters.algorithm.@schema
-        - parameters.execution_parameters.algorithm.@schema
-        - parameters.model_parameters.@schema # A-Box estimator ...
-        - parameters.optimisation_parameters.@schema
-        - parameters.execution_parameters.@schema
+        - estimator.algorithm.@schema # T-Box algorithm mathematical concept
+        - estimator.parameters.model_parameters.algorithm.@schema # T-Box parameter info ...
+        - estimator.parameters.optimisation_parameters.algorithm.@schema
+        - estimator.parameters.execution_parameters.algorithm.@schema
+        - estimator.parameters.model_parameters.@schema # A-Box parameter ...
+        - estimator.parameters.optimisation_parameters.@schema
+        - estimator.parameters.execution_parameters.@schema
       '@rdf':
         mapped_by: http://www.padre-lab.eu/PyPadsInjection
-        defined_in: http://www.padre-lab.eu/onto/Sklearn#0.19.1
+        implemented_in: http://www.padre-lab.eu/onto/Sklearn#0.19.1
     !!python/pPath 'base.BaseEstimator':
       ;default_model: null
       __init__:
@@ -34,7 +34,7 @@ mappings:
       !!python/pPath 'score':
         hooks: pypads_metric
     !!python/pPath 'metrics.classification':
-      !!python/rSeg '.*':
+      !!python/rSeg '^(?!_).+':
         data:
           '@rdf':
             in_context: http://www.padre-lab.eu/onto/Metric
