--- a/pypads_padre/bindings/resources/mapping/torch_1_4_0.yml
+++ b/pypads_padre/bindings/resources/mapping/torch_1_4_0.yml
@@ -3,11 +3,14 @@ metadata:
   version: "0.1.0"
   library:
     name: "torch"
-    version: "1.4.0+cpu"
+    version: ">= 1.4.0+cpu"
 
 mappings:
   !!python/pPath torch:
     !!python/pPath optim.optimizer.Optimizer:
+      data:
+        '@rdf':
+          in_context: http://www.padre-lab.eu/onto/Optimizer
       !!python/pPath step:
         hooks: ["pypads_grad"]
     !!python/pPath utils.data.dataloader._BaseDataLoaderIter:
