--- a/pypads_padre/bindings/resources/mapping/torchvision_0_5_0.yml
+++ b/pypads_padre/bindings/resources/mapping/torchvision_0_5_0.yml
@@ -3,10 +3,22 @@ metadata:
   version: "0.1.0"
   library:
     name: "torchvision"
-    version: "0.5.0"
+    version: ">= 0.5.0"
 
 mappings:
   !!python/pPath torchvision:
-    !!python/pPath datasets.mnist.MNIST:
-      !!python/pPath __init__:
-        hooks: ["pypads_dataset"]
+    !!python/pPath datasets:
+      !!python/rSeg '(?!^folder)(?!^.*utils)(?!^vision$)^(?!_).+':
+        !!python/rSeg '^(?!_).+':
+          !!python/rSeg '__init__':
+            data:
+              '@rdf':
+                in_context: http://www.padre-lab.eu/onto/Dataset
+            hooks: ["pypads_dataset"]
+#      !!python/pPath vision.VisionDataset:
+#        !!python/pPath __init__:
+#          data:
+#            '@rdf':
+#              in_context: http://www.padre-lab.eu/onto/Dataset
+#          hooks: [ "pypads_dataset" ]
+
