--- a/pypads_padre/bindings/resources/mapping/torch_1_4_0.yml
+++ b/pypads_padre/bindings/resources/mapping/torch_1_4_0.yml
@@ -12,19 +12,16 @@ mappings:
 #        '@rdf':
 #          in_context: http://www.padre-lab.eu/onto/Optimizer
 #      !!python/pPath step:
-#        hooks: ["pypads_grad"]
+#        hooks: ["pypads_metric"]
     !!python/pPath utils.data.dataloader._BaseDataLoaderIter:
       !!python/pPath _next_index:
+        data:
+          '@rdf':
+            in_context: http://www.padre-lab.eu/onto/Split
         hooks: ["pypads_split"]
     !!python/pPath nn:
-#      !!python/pPath parameter.Parameter:
-#        !!python/pPath backward:
-#          hooks: "pypads_grad"
-#      !!python/pPath modules:
-#        !!python/pPath container.Sequential:
-#          !!python/pPath forward:
-#            hooks: ["pypads_predict"]
-        !!python/pPath loss._Loss:
+      !!python/pPath modules.loss:
+        !!python/rSeg '^(?!_).+':
           !!python/pPath forward:
             data:
               '@rdf':
