Chg: dev: hyperparameters of torch dataloader.

--- a/pypads_padre/bindings/resources/mapping/torch_1_4_0.yml
+++ b/pypads_padre/bindings/resources/mapping/torch_1_4_0.yml
@@ -22,6 +22,9 @@ mappings:
             '@rdf':
               in_context: http://www.padre-lab.eu/onto/Split
           hooks: ["pypads_split"]
+      !!python/pPath DataLoader:
+        !!python/pPath __init__:
+          hooks: ['pypads_params']
     !!python/pPath nn:
       !!python/pPath modules.loss:
         !!python/rSeg '^(?!_).+':
