--- a/pypads_padre/bindings/resources/mapping/keras_2_3_1.yml
+++ b/pypads_padre/bindings/resources/mapping/keras_2_3_1.yml
@@ -6,6 +6,28 @@ metadata:
     version: "2.3.1"
 
 mappings:
+  !!python/pPath keras:
+    !!python/pPath __init__:
+      import-hooks: [ "pypads_import" ]
+    !!python/pPath metrics.Metric.__call__:
+      hooks: [ "pypads_metric" ]
+      data:
+        '@rdf':
+          in_context: http://www.padre-lab.eu/onto/Metric
+    !!python/pPath datasets:
+      !!python/rSeg '^(?!_).+':
+        !!python/pPath load_data:
+          hooks: [ "pypads_dataset" ]
+          data:
+            '@rdf':
+              in_context: http://www.padre-lab.eu/onto/Dataset
+    !!python/pPath engine.training.Model:
+      !!python/pPath __init__:
+        hooks: [ "pypads_init" ]
+      !!python/pPath '(fit|fit_generator)$':
+        hooks: [ "pypads_fit" ]
+      !!python/pPath predict_classes:
+        hooks: [ "pypads_predict" ]
   :keras:
     :metrics.Metric:
       hooks: ["pypads_metric"]
