--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Develope
 [tool.poetry.dependencies]
 python = "^3.7.0"
 pypads = "^0.5.7"
-pypads-onto = "^0.2.2"
+#pypads-onto = "^0.2.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2.5"
